@@ -6,6 +6,7 @@ Xfdesktop 4.x.y
   * Support absolute icon paths in desktop files (bug #7160).
     Patch by xaizek@gmail.com.
   * Scroll to the selected background in the settings (bug #7087).
+  * Implement monitoring for special file icons (bug #6986).
 
 
 Xfdesktop 4.8.0
